<resources>
    <string name="app_name">简单天气</string>
    <string name="details_weather">天气详情</string>
    <string name="set_city">设置城市</string>
    <string name="refresh">刷新</string>
    <string name="about">关于</string>
    <string name="select_city">请选择城市</string>
    <string name="province_city">省/市</string>
    <string name="city_county">市/区</string>
    <string name="county_county">区/县</string>
    <string name="confirm">确定</string>
    <string name="please_set_city">欢迎使用！请先设置城市😊</string>
    <string name="tip_double_click_exit">再点一次退出程序</string>
    <string name="location_not_set">未设置城市</string>
    <string name="about_function">支持全国三千多个城市的天气查询</string>
    <string name="about_developer">作者:</string>
    <string name="about_developer_name">seekerzhouk</string>
    <string name="version">version:</string>
    <string name="wind_description">风力：</string>
    <string name="loading">正在刷新…</string>
    <string name="succeed_refresh_str">刷新成功</string>
    <string name="wifi_connected">您正在使用WiFi网络</string>
    <string name="mobile_connected">您正在使用移动网络</string>
    <string name="network_disconnected">网络已断开，请检查网络</string>
</resources>
